--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -39,9 +39,9 @@
         </div>
 
         <div class="resource flex-group-center">
-          <label for="system.ini" class="resource-label">{{localize 'SLUMDOGS.Labels.ini'}}</label>
+          <label for="system.iniDice" class="resource-label">{{localize 'SLUMDOGS.Labels.ini'}}</label>
           <div class="resource-content flexrow flex-center flex-between">
-            <input type="text" name="system.ini" value="{{system.ini}}" data-dtype="Number" />
+            <input type="text" name="system.iniDice" value="{{system.iniDice}}" data-dtype="Number" />
           </div>
         </div>
 
